--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,24 @@
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     color: #F9FAf8;
+    padding: 0px 100px;
     }
 
 .header h2 {
     margin: 12px;
     font-size: 24px;
+    flex: 1;
 }    
 
 h1 {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAf8;
+    margin-bottom: 5px;
+    margin-top: 0px;
 }
 
 ul {
@@ -27,41 +31,60 @@ ul {
     font-size: 18px;
     gap: 18px;
     margin: 12px;
+    /* flex: 1; */
+    
 }
 
 .awesome {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 100px 200px;
+    padding: 100px 150px;
+    color: #e5e7eb;
+    
 }
 
 .awesomeleft, .awesomeright {
-    flex: 1;
+    flex: 1 1 0;
+    max-height: 400px;
 }
 
 .awesomeleft {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
 }
 
 .awesomeright {
-    ;
+    display: flex;
+    flex-direction: column;
 }
 
 .randominfo {
     text-align: center;
+    padding: 24px;
+    padding-bottom: 60px;
+
+}
+
+.randominfo h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
 }
 .randominfopics {
     display: flex;
     justify-content: center;
     gap: 36px;
-    
+    margin-top: 40px; 
 }
 
 .images {
     display: flex;
     flex-direction: column;
     width: 150px;
+    
 }
 
 .knights {
@@ -69,4 +92,72 @@ ul {
     width: 150px;
     height: 150px;
     object-fit: cover;
+    border-radius: 50%;
+}
+
+.testimonial {
+    background-color: #e6e7eb;
+    padding: 36px 100px;
+    
+}
+
+.testimonial p {
+    font-size: 36px;
+    font-weight: lighter;
+    color: #1f2937;
+    font-style:italic;
+    margin-bottom: 0px;
+}
+
+/* .calltoaction {
+
+} */
+
+.bluepart {
+    display: flex;
+    background-color: rgb(51, 98, 199);
+    margin: 50px 50px 50px 100px;
+    border-radius: 7px;
+    padding: 35px 100px;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+.bluepart h3 {
+    margin-bottom: 1px;
+    margin-top: 1px;
+    font-size: 12px;
+}
+
+.bluepart p {
+    margin-bottom: 1px;
+    margin-top: 1px;
+    font-size: 12px;
+}
+
+button {
+    color: white;
+    background-color: rgb(51, 98, 199);
+    border-radius: 7px;
+    width: 100px;
+    height: 30px;
+    border-style: none;
+    
+}
+
+.bluepart button {
+    border-style: solid;
+    border-color: white;
+}
+
+* {
+    font-family: Arial, Helvetica, sans-serif
+}
+
+footer {
+    text-align: center;
+    color:#E5E7EB;
+    padding: 32px;
+    font-size: 14px;
 }
